stylesheets/default.css
@media (max-width: 480px) {
  .about-left {
    max-width: 100%;
    float: none;
  }
  
  .about-right {
    max-width: 100%;
    float: none;
  }
}

@media (min-width: 481px) {
  
  .about-left {
  max-width: 25%;
    float: left;
}

  .about-right {
  max-width: 75%;
  float: right;
}
}

body {
  margin: 0;
  padding: 0;
  font-family: 'Open Sans', sans-serif;
}

* {
  box-sizing: border-box;
}

nav {
  position: fixed;
  max-width: 100%;
  width: 100vw;
  z-index: 1;
}

.navbar {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #333;
}

.navbar li {
  float: right;
}

.navbar a {
  display: block;
  text-align: center;
  text-decoration: none;
  font-size: 1.2em;
  color: white;
  padding: 14px 16px;
}

.navbar a:hover {
  background-color: #111;
}

h1 {
  text-align: center;
  color: #00ffd7;
  font-size: 12vw;
  left: 0;
  right: 0;
  position: absolute;
  margin-top: 30vh;
  text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.8);
  animation: change-color 5s ease-in-out 2s infinite alternate;
  -webkit-animation: change-color 5s ease-in-out 2s infinite alternate;
  -moz-animation: change-color 5s ease-in-out 2s infinite alternate;
}

@-webkit-keyframes change-color {
  from {
    color: #00ffd7;
  }
  to {
    color: black;
    text-shadow: 4px 4px 2px rgba(0, 255, 215, 0.8)
  }
}

@keyframes change-color {
  from {
    color: #00ffd7;
  }
  to {
    color: black;
    text-shadow: 4px 4px 2px rgba(0, 255, 215, 0.8)
  }
}

.home {
  background-image: url("../imgs/coding-cube.jpg");
  background-size: cover;
  background-attachment: fixed;
  max-width: 100%;
  height: 95vh;
}

h4 {
  font-size: 2em;
  margin-top: 20px;
  color: #0000cc;
}



.about-left {
  height: auto;
  text-align: center;
}



.about-left .contact-me-h4 {
  margin-top: 100px;
}

.about-left ul {
  list-style-type: none;
  padding: 0;
}

.about-left .fa {
  font-size: 60px;
  color: black;
}

.about-left .fa:hover {
  color: blue;
}

.about-left a {
  font-size: 20px;
  text-decoration: none;
  color: black;
}

.about-right {
  height: auto;
  text-align: center;
  margin-top: 30px;
}

.about-right img {
  width: 250px;
  height: 250px;
  border-radius: 50%;
  margin-top: -30px;
}

.about-right p {
  text-align: justify;
  font-size: 1em;
  margin-left: 50px;
  margin-right: 50px;
}

.first-p {
  margin-top: 30px;
}

.projects {
  clear: both;
  text-align: center;
  height: auto;
  max-width: 100%;
  background-color: #c0c0c0;
}

h2 {
  font-size: 2.5em;
  color: #0000cc;
  padding-top: 30px;
}

.projects img {
  margin: 5vw;
  margin-top: 70px;
  opacity: 0.8;
  width: 13em;
}

.projects img:hover {
  opacity: 1;
}

footer p {
  margin-left: 10px;
  color: black;
}

